Spring Advanced/Errors/src/main/java/com/example/errors/web/GlobalApplicationExceptionHandling/GlobalExceptionHandler.java
package com.example.errors.web.GlobalApplicationExceptionHandling;

import org.springframework.http.HttpStatus;
import org.springframework.web.bind.annotation.ControllerAdvice;
import org.springframework.web.bind.annotation.ExceptionHandler;
import org.springframework.web.servlet.ModelAndView;

@ControllerAdvice
public class GlobalExceptionHandler {

    @ExceptionHandler(ObjectNotFoundExceptionGE.class)
    public ModelAndView handleDbExceptions(ObjectNotFoundExceptionGE e){

        ModelAndView modelAndView = new ModelAndView("object-not-found");
        modelAndView.addObject("objectId", e.getObjectId());
        modelAndView.setStatus(HttpStatus.NOT_FOUND);

        return modelAndView;
    }
}
